--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write *.{jsx,js}",
     "dev": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.3.1"
+    "parcel": "^2.3.1",
+    "prettier": "^2.5.1"
   },
   "dependencies": {
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   }
 }
