--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run test
+name: Run tests
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   test:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -14,11 +15,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          cache: 'npm'
       - run: npm ci
       - run: npm run verify
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          path-to-lcov: client/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
