--- a/package.json
+++ b/package.json
@@ -12,11 +12,29 @@
     "type": "git",
     "url": "git+https://github.com/kristiania-pg6301-2022/pg6301-innlevering-StianOek.git"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "collectCoverageFrom": [
+      "*{.jsx,js}"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kristiania-pg6301-2022/pg6301-innlevering-StianOek/issues"
   },
-  "homepage": "https://github.com/kristiania-pg6301-2022/pg6301-innlevering-StianOek#readme"
+  "homepage": "https://github.com/kristiania-pg6301-2022/pg6301-innlevering-StianOek#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1"
+  }
 }
