--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   }
 }
