--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "*{.jsx,js}"
+      "client/*{.jsx,js}"
     ]
   },
   "keywords": [],
