--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "format:check" : "prettier --check *.{jsx,js} __tests__/**/*.{jsx,js} ",
     "dev": "parcel index.html",
     "test": "jest",
-    "test:coverage": "jest --collect-coverage",
+    "test:coverage": "jest --coverage",
     "verify": "npm run format:check && npm run test:coverage"
   },
   "keywords": [],
