--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
+  "proxy": "http://localhost:3000",
   "main": "index.js",
   "scripts": {
     "format": "prettier --write *.{jsx,js} __tests__/**/*.{jsx,js}",
