--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm start",
-    "dev": "cd client && parcel index.html",
+    "dev": "concurrently npm:dev:server && npm:dev:client",
+    "dev:server": "cd server && npm run dev",
+    "dev:client": "cd client && npm run dev",
     "verify": "cd client && npm run verify"
   },
   "repository": {
@@ -35,6 +37,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-jest": "^27.5.1",
+    "concurrently": "^7.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1"
   },
