--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
