--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,11 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "proxy": "http://localhost:3000",
-  "main": "index.js",
   "scripts": {
     "format": "prettier --write *.{jsx,js} __tests__/**/*.{jsx,js}",
-    "format:check" : "prettier --check *.{jsx,js} __tests__/**/*.{jsx,js} ",
-    "dev": "parcel index.html",
+    "format:check": "prettier --check *.{jsx,js} __tests__/**/*.{jsx,js} ",
+    "dev": "parcel watch index.html",
+    "build": "parcel build index.html",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "verify": "npm run format:check && npm run test:coverage"
@@ -36,6 +35,7 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "@parcel/transformer-react-refresh-wrap": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
