--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -20,5 +19,6 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
+          path-to-lcov: ./coverage/lcov.info
+          base-path: ./client/
           github-token: ${{ secrets.GITHUB_TOKEN }}
