--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          path-to-lcov: ./coverage/lcov.info
+          path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
           base-path: ./client/
           github-token: ${{ secrets.GITHUB_TOKEN }}
