--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
+          path-to-lcov: ${{ github.workspace }}/server/coverage/lcov.info
           path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
+          base-path: ./server/
           base-path: ./client/
           github-token: ${{ secrets.GITHUB_TOKEN }}
