--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "build": "npm install",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --collectCoverage"
   },
   "keywords": [],
   "author": "",
