attempt-3* setting up tests for server and client

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "*{.jsx,js}"
+      "*{.jsx,js}",
+      "pages/*{.jsx,js}"
     ]
   },
   "devDependencies": {
