--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "*{.jsx,js}"
+      "pages/*{.jsx,js}"
     ]
   },
   "devDependencies": {
