attempt-13* setting up tests for server and client

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "client/pages/*{.jsx,js}"
+      "pages/*{.jsx,js}"
     ]
   },
   "devDependencies": {
