attempt-14* setting up tests for server and client

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "client/pages/*{.jsx}"
+      "client/**/*{.jsx}"
     ]
   },
   "keywords": [],
