--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,15 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
+      "@babel/preset-react",
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "jest": {
