--- a/server/package.json
+++ b/server/package.json
@@ -38,5 +38,12 @@
         }
       ]
     ]
+  },
+  "jest": {
+    "collectCoverage": true,
+    "testEnvironment": "jsdom",
+    "collectCoverageFrom": [
+      "*.{js,jsx}"
+    ]
   }
 }
