--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           node-version: 16.x
       - run: npm ci
+      - run: npm install
+        working-directory: client
+      - run: npm install
+        working-directory: server
       - run: npm run verify
       - name: Coveralls
         uses: coverallsapp/github-action@master
