--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "build": "npm install",
+    "verify": "npm run test:coverage",
     "test": "jest",
-    "test:coverage": "jest --collectCoverage"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -41,7 +42,7 @@
   },
   "jest": {
     "collectCoverage": true,
-    "testEnvironment": "jsdom",
+    "testEnvironment": "node",
     "collectCoverageFrom": [
       "*.{js,jsx}"
     ]
